--- a/blog.html
+++ b/blog.html
@@ -33,12 +33,20 @@
       </h2>
     </header>
     <main>
+      <p>august 25, 2023</p>
+      <h3>
+        <a style="color: darkolivegreen" href="blogPosts/bp3.html"
+          >frat house in boston.
+        </a>
+      </h3>
+      <br> <!-- Add this line to create an extra new line -->
       <p>october 5, 2022</p>
       <h3>
         <a style="color: darkolivegreen" href="blogPosts/bp2.html"
           >alone in chicago.
         </a>
       </h3>
+      <br> <!-- Add this line to create an extra new line -->
       <p>december 27, 2021</p>
       <h3>
         <a style="color: darkolivegreen" href="blogPosts/bp1.html"
