--- a/blogPosts/bp2.html
+++ b/blogPosts/bp2.html
@@ -90,9 +90,10 @@
           will never forget, and I am grateful I spent my summer alone in
           Chicago.
         </p>
-
+        <p><img src="img/me with fish.PNG" alt="me with a fish at ESSL" /></p>
+        <p><img src="img/bp2kayak.png" alt="kayak" /></p>
         <p>
-          <img src="img/bp2kayak.png" alt="kayaking" />
+          <img src="img/bp2kayak.PNG" alt="kayaking" />
           <img src="img/bp2lollapalooza.png" alt="lollapalooza" />
         </p>
       </section>
