--- a/index.html
+++ b/index.html
@@ -1,145 +1,152 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <!--setting language of page to english-->
-  <head>
-    <meta charset="utf-8" />
-    <!--setting characters which are most valid ones-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--helps for non-computer devices-->
-    <title>Jessica Wu | Home</title>
-    <link rel="stylesheet" href="stylesHome.css" />
-  </head>
-  <body>
-    <header>
-      <h1>
-        <a style="color: black" href="https://jessie20022.github.io/"
-          >Jessica Wu</a
-        >
-        <!--links back to home page-->
-      </h1>
-      <h2>
-        <nav>
-          <ul>
-            <!--unordered list-->
-            <a href="https://jessie20022.github.io/">home</a>
-            <a href="education.html">education</a>
-            <a href="projects.html">projects</a>
-            <a href="blog.html">blog</a>
-            <a href="relax.html">relax</a>
-            <a href="docs/resume.pdf">resume</a>
-          </ul>
-        </nav>
-      </h2>
-    </header>
-    <main>
-      <p>
-        Hi! I'm Jessica, a junior at the University of Maryland. I was born and
-        raised in Maryland, but I love to travel and explore new places. I also
-        love to learn new things--especially if it's through a hands-on
-        activity.
-      </p>
+<!--setting language of page to english-->
 
-      <section>
-        <h3>currently...</h3>
-        <p>
-          At UMD, I study computer science. I would also love to be involved in
-          research for computer and data science in the future. Along the way,
-          I've met some amazing educators who gave me unparalleled instruction
-          and opportunities, leading to my decision to double minor in
-          statistics and business analytics. While I love studying these three
-          subjects, I also have an interest for neuroscience and psychology that
-          I developed in high school.
-        </p>
-        <p>
-          I have been working on personal projects such as creating my own
-          Minesweeper game and PyTracker, a webapp that helps track one's health
-          statistics. The progress is quite slow, but not sedentary.
-        </p>
-        <p>
-          At the moment, I'm interning with Akira Technologies where I am a Data
-          Science Analyst Intern. Here, I am working with another intern to
-          create a Python project for data pipeline observability.
-        </p>
-      </section>
+<head>
+  <meta charset="utf-8" />
+  <!--setting characters which are most valid ones-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--helps for non-computer devices-->
+  <title>Jessica Wu | Home</title>
+  <link rel="stylesheet" href="stylesHome.css" />
+</head>
 
-      <section>
-        <h3>previously...</h3>
-        <p>
-          This past summer of 2022, I interned at Motorola Solutions as a
-          Pre-Sales System Engineer. During my time in Chicago, my team taught
-          me how to design and quote radio frequency systems. I also got to work
-          in Google Apps Scripts (Javascript) and code various automation tools
-          to help my team make quoting faster.
-        </p>
-        <p>
-          During the spring of 2021, I worked as an intern at Exerceo in a
-          professional mentorship program while using Linux and text editors on
-          Fedora in Java and JavaScript in order to create an inventory that can
-          store items.
-        </p>
-        <p>
-          In high school, I participated in FIRST robotics where I helped with
-          the design and building of our robot as well as conduct team bonding
-          exercises to help improve everyone's communication.
-        </p>
-      </section>
-
-      <section>
-        <h3>for fun...</h3>
-        <p>
-          Beyond my academic interests, I love to spent my time playing tennis,
-          piano, and a few games such as Valorant, Minecraft, and Clash Royale.
-          With friends, I love to go to new places, whether it be educational or
-          for fun, to create memories and take pictures (scroll down!). For
-          personal improvement, I like to write in my journal, improve my
-          Chinese, and occasionally work out.
-        </p>
-      </section>
-
-      <section>
-        <h3>explore...</h3>
-        <p>Browse the other pages!</p>
-        <p>
+<body>
+  <header>
+    <h1>
+      <a style="color: black" href="https://jessie20022.github.io/">Jessica Wu</a>
+      <!--links back to home page-->
+    </h1>
+    <h2>
+      <nav>
+        <ul>
+          <!--unordered list-->
+          <a href="https://jessie20022.github.io/">home</a>
           <a href="education.html">education</a>
-          : a summary of educational institutions and coursework
-        </p>
-        <p>
           <a href="projects.html">projects</a>
-          : a list of the projects I'm working on/have worked on
-        </p>
-        <p>
-          <a href="blog.html">blog</a> : a blurb of my thoughts on random topics
-        </p>
-        <p>
-          <a href="relax.html">relax</a>: a page dedicated to links that give
-          you a break from whatever you're working on
-        </p>
-        <p><a href="docs/resume.pdf">resume</a> : a copy of my resume</p>
-        <!--add the other page links here-->
-      </section>
+          <a href="blog.html">blog</a>
+          <a href="relax.html">relax</a>
+          <a href="docs/resume.pdf">resume</a>
+        </ul>
+      </nav>
+    </h2>
+  </header>
+  <main>
+    <p>
+      Hi! I'm Jessica, a senior at the University of Maryland. I was born and
+      raised in Maryland, but I love to travel and explore new places. I also
+      love to learn new things--especially if it's through a hands-on
+      activity.
+    </p>
 
-      <section>
-        <h3>reach out!</h3>
-        <p>Email: aprilwushuang at gmail dot com</p>
-        <p>
-          LinkedIn:
-          <a href="https://www.linkedin.com/in/jessica-wu3/">Jessica Wu</a>.
-        </p>
-      </section>
+    <section>
+      <h3>currently...</h3>
+      <p>
+        At UMD, I study computer science. I would also love to be involved in
+        research for computer and data science in the future. Along the way,
+        I've met some amazing educators who gave me unparalleled instruction
+        and opportunities, leading to my decision to double minor in
+        statistics and business analytics. While I love studying these three
+        subjects, I also have an interest for neuroscience and psychology that
+        I developed in high school.
+      </p>
+      <p>
+        During the school year, I was able to finish some projects such as Squirrel.io and an analysis on UMD grade
+        data, which you can find on my resume. These projects were great for me to learn Swift and iOS app development
+        as well as learning the ins and outs of Python and graphing.
+        I have been working on personal projects such as creating PyTracker, a webapp that helps track one's health
+        statistics. The progress is quite slow, but not sedentary.
+      </p>
+      <p>
+        At the moment, I'm interning with Akira Technologies where I am a Data
+        Science Analyst Intern. Here, I am working with another intern to
+        create a Python project for data pipeline observability.
+      </p>
+    </section>
 
-      <section>
-        <p>
-          Here is a picture of me with a fish at the
-          <a href="https://education.fcps.org/essl/"
-            >Earth and Space Science Lab</a
-          >
-        </p>
-        <p><img src="img/me with fish.PNG" alt="me with a fish at ESSL" /></p>
-      </section>
-    </main>
-    <footer>
-      <p>Copyright &copy; Jessica Wu; updated October 5, 2022</p>
-    </footer>
-  </body>
+    <section>
+      <h3>previously...</h3>
+      <p>
+        This past summer, I interned at <a href="https://www.chewy.com/">Chewy</a> as a software engineer intern. My
+        main project here was to perform chaos testing on the header and footer by injecting API errors. With my
+        results, we could see if the website was
+        responding favorably or not.
+      </p>
+      <p>
+        This past summer of 2022, I interned at Motorola Solutions as a
+        Pre-Sales System Engineer. During my time in Chicago, my team taught
+        me how to design and quote radio frequency systems. I also got to work
+        in Google Apps Scripts (Javascript) and code various automation tools
+        to help my team make quoting faster.
+      </p>
+      <p>
+        During the spring of 2021, I worked as an intern at Exerceo in a
+        professional mentorship program while using Linux and text editors on
+        Fedora in Java and JavaScript in order to create an inventory that can
+        store items.
+      </p>
+      <p>
+        In high school, I participated in FIRST robotics where I helped with
+        the design and building of our robot as well as conduct team bonding
+        exercises to help improve everyone's communication.
+      </p>
+    </section>
+
+    <section>
+      <h3>for fun...</h3>
+      <p>
+        Beyond my academic interests, I love to spent my time playing tennis,
+        piano, and a few games such as Valorant, Fortnite, Minecraft, and Clash Royale.
+        With friends, I love to go to new places, whether it be educational or
+        for fun, to create memories and take pictures (scroll down!). For
+        personal improvement, I like to write in my journal and improve my
+        Chinese.
+      </p>
+    </section>
+
+    <section>
+      <h3>explore...</h3>
+      <p>Browse the other pages!</p>
+      <p>
+        <a href="education.html">education</a>
+        : a summary of educational institutions and coursework
+      </p>
+      <p>
+        <a href="projects.html">projects</a>
+        : a list of the projects I'm working on/have worked on
+      </p>
+      <p>
+        <a href="blog.html">blog</a> : a blurb of my thoughts on random topics
+      </p>
+      <p>
+        <a href="relax.html">relax</a>: a page dedicated to links that give
+        you a break from whatever you're working on
+      </p>
+      <p><a href="docs/resume.pdf">resume</a> : a copy of my resume</p>
+      <!--add the other page links here-->
+    </section>
+
+    <section>
+      <h3>reach out!</h3>
+      <p>Email: aprilwushuang at gmail dot com</p>
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com/in/jessica-wu3/">Jessica Wu</a>.
+      </p>
+    </section>
+
+    <section>
+      <p>
+        Here is a picture of me with a fish at the
+        <a href="https://education.fcps.org/essl/">Earth and Space Science Lab</a>
+      </p>
+      <p><img src="img/me with fish.PNG" alt="me with a fish at ESSL" /></p>
+    </section>
+  </main>
+  <footer>
+    <p>Copyright &copy; Jessica Wu; updated August 17, 2023</p>
+  </footer>
+</body>
+
 </html>
