--- a/blogPosts/bp2.html
+++ b/blogPosts/bp2.html
@@ -23,10 +23,10 @@
           <ul>
             <!--unordered list-->
             <a href="https://jessie20022.github.io/">home</a>
-            <a href="education.html">education</a>
-            <a href="projects.html">projects</a>
-            <a href="blog.html">blog</a>
-            <a href="relax.html">relax</a>
+            <a href="https://jessie20022.github.io/education.html">education</a>
+            <a href="https://jessie20022.github.io/projects.html">projects</a>
+            <a href="https://jessie20022.github.io/blog.html">blog</a>
+            <a href="https://jessie20022.github.io/relax.html">relax</a>
             <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
           </ul>
         </nav>
