--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
             <a href="projects.html">projects</a>
             <a href="blog.html">blog</a>
             <a href="relax.html">relax</a>
-            <a href="docs/Resume--Summer2021.docx.pdf">resume</a>
+            <a href="docs/resume.pdf">resume</a>
           </ul>
         </nav>
       </h2>
