--- a/blogPosts/bp3.html
+++ b/blogPosts/bp3.html
@@ -15,14 +15,14 @@
 <body>
     <header>
         <h1>
-            <a style="color: black" href="https://jessie20022.github.io/">Jessica Wu</a>
+            <a style="color: black" href="https://jessie20022.github.io/2020-2024-portfolio/">Jessica Wu</a>
             <!--links back to home page-->
         </h1>
         <h2>
             <nav>
                 <ul>
                     <!--unordered list-->
-                    <a href="https://jessie20022.github.io/">home</a>
+                    <a href="https://jessie20022.github.io/2020-2024-portfolio/">home</a>
                     <a href="https://jessie20022.github.io/education.html">education</a>
                     <a href="https://jessie20022.github.io/projects.html">projects</a>
                     <a href="https://jessie20022.github.io/blog.html">blog</a>
