--- a/education.html
+++ b/education.html
@@ -15,14 +15,14 @@
 <body>
   <header>
     <h1>
-      <a style="color: black" href="https://jessie20022.github.io/">Jessica Wu</a>
+      <a style="color: black" href="https://jessie20022.github.io/2020-2024-portfolio/">Jessica Wu</a>
       <!--links back to home page-->
     </h1>
     <h2>
       <nav>
         <ul style="margin-left: -2.5rem">
           <!--unordered list-->
-          <a href="https://jessie20022.github.io/">home</a>
+          <a href="https://jessie20022.github.io/2020-2024-portfolio/">home</a>
           <a href="education.html">education</a>
           <a href="projects.html">projects</a>
           <a href="blog.html">blog</a>
