--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
   <header>
     <h1>
-      <a style="color: black" href="https://jessie20022.github.io/">Jessica Wu</a>
+      <a style="color: black" href="https://jessie20022.github.io/2020-2024-portfolio/">Jessica Wu</a>
       <!--links back to home page-->
     </h1>
     <h2>
       <nav>
         <ul>
           <!--unordered list-->
-          <a href="https://jessie20022.github.io/">home</a>
+          <a href="https://jessie20022.github.io/2020-2024-portfolio/">home</a>
           <a href="education.html">education</a>
           <a href="projects.html">projects</a>
           <a href="blog.html">blog</a>
@@ -33,6 +33,7 @@
     </h2>
   </header>
   <main>
+    <p>Please visit <a href="https://jessie20022.github.io/">https://jessie20022.github.io/</a>! This website is no longer active and will not be updated, but remains accessible for the history.</p>
     <p>
       Hi! I'm Jessica, a senior at the University of Maryland. I was born and
       raised in Maryland, but I love to travel and explore new places. I also
