--- a/blogPosts/bp1.html
+++ b/blogPosts/bp1.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h1>
-        <a style="color: black" href="https://jessie20022.github.io/"
+        <a style="color: black" href="https://jessie20022.github.io/2020-2024-portfolio/"
           >Jessica Wu</a
         >
         <!--links back to home page-->
@@ -22,7 +22,7 @@
         <nav>
           <ul>
             <!--unordered list-->
-            <a href="https://jessie20022.github.io/">home</a>
+            <a href="https://jessie20022.github.io/2020-2024-portfolio/">home</a>
             <a href="https://jessie20022.github.io/education.html">education</a>
             <a href="https://jessie20022.github.io/projects.html">projects</a>
             <a href="https://jessie20022.github.io/blog.html">blog</a>
